:bug: Fix the grades sometimes being too large for their column in diary

--- a/src/stylesheets/familyPlan.css
+++ b/src/stylesheets/familyPlan.css
@@ -26,8 +26,8 @@ html .announcement .warning .inner {
 	font-size: 15px;
 	font-family: "Inter", sans-serif;
 	font-weight: 500;
-	padding: 10px;
-	padding-top: 5px;
+	padding: 5px;
+	padding-bottom: 0;
 	border-radius: var(--corner-radius);
 	box-shadow: 2px 3px 5px -3px var(--red-shadow-color);
 }
